--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="container">
         <section class="flex-item"></section>
         <section class="flex-item"></section>
-        <section class="flex-item"></section>
+        <!-- <section class="flex-item"></section> -->
     </section>
     
 </body>
