--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <section class="container">
-        <section class="flex-item"></section>
-        <section class="flex-item"></section>
+        <section class="flex-item-align-self"></section>
         <!-- <section class="flex-item"></section> -->
+        <section class="flex-item"></section>
     </section>
     
 </body>
