--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLEXBOX</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="container">
-        <section class="flex-item-align-self"></section>
-        <!-- <section class="flex-item"></section> -->
-        <section class="flex-item-align-self"></section>
+        <section class="flex-item"></section>
+        <section class="flex-item"></section>
+        <section class="flex-item"></section>
     </section>
-    
+
 </body>
+
 </html>
